--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,16 @@
             <artifactId>xsoup</artifactId>
             <version>0.3.1</version>
         </dependency>
+        
+       
+        <!-- https://mvnrepository.com/artifact/org.mindrot/jbcrypt -->
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.3m</version>
+        </dependency>
+
+
 
 
         
